# signapps

./: .claudeignore  .dockerignore  .env.example  .env.required  .gitignore  .service_ports.json  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONCERNS.md  CONVENTIONS.md  Calcul Marge 2019 - 2032.xlsx  Cargo.toml  Dockerfile  Dockerfile.backend  IMPLEMENTATION_SUMMARY.md  INTEGRATIONS.md  INTERNAL_ONBOARDING.md  Makefile  PHASE_83_TEST_REPORT.md  QUICK_REFERENCE.md  README.md  SECURITY_POLICY.md  SERVICES_STARTUP_REPORT.md  STACK.md  TESTING.md  ai_ui_prompt.txt  architecture_workspace.md  bacon.toml  body.json  build.bat  build_cargo_utf8.txt  cargo_warnings.txt  check.json  check_error.txt  check_error_cmd.txt  check_error_cmd2.txt  check_prereqs_and_test.ps1  check_utf8.json  claude_help.txt  (+70 more)
crates/signapps-accounting-fec/: Cargo.toml
crates/signapps-accounting-fec/src/: lib.rs
crates/signapps-ad-core/: Cargo.toml  README.md
crates/signapps-ad-core/src/: acl.rs  builder.rs  crypto_helpers.rs  dc_lifecycle.rs  dn.rs  domain.rs  entry.rs  filter.rs  guid.rs  lib.rs  mail_provisioner.rs  mail_resolver.rs  naming.rs  provisioner.rs  reconciliation.rs  sid.rs  snapshots.rs  sync_worker.rs  uac.rs
crates/signapps-ad-core/tests/: infrastructure.rs  integration.rs
crates/signapps-alerts/: Cargo.toml
crates/signapps-alerts/src/: lib.rs
crates/signapps-approval/: Cargo.toml
crates/signapps-audio-capture/: Cargo.toml
crates/signapps-audio-capture/src/: coreaudio.rs  lib.rs  pulseaudio.rs  vad.rs  wasapi.rs
crates/signapps-audit/: Cargo.toml
crates/signapps-audit/src/: lib.rs
crates/signapps-bridge/: Cargo.toml
crates/signapps-bridge/src/: lib.rs
crates/signapps-cache/: Cargo.toml
crates/signapps-cache/src/: lib.rs
crates/signapps-comments/: Cargo.toml
crates/signapps-comments/src/: lib.rs
crates/signapps-common/: Cargo.toml  build.rs
crates/signapps-common/src/: accounting.rs  active_stack.rs  alerts.rs  approval.rs  audit.rs  auth.rs  bootstrap.rs  bridge.rs  comments.rs  config.rs  config_reload.rs  crypto.rs  data_connectors.rs  data_export.rs  data_import.rs  dlp.rs  dry_run.rs  e2e_crypto.rs  email_templates.rs  error.rs  events.rs  graphql_layer.rs  healthz.rs  indexer.rs  lib.rs  maintenance_flag.rs  marketplace.rs  middleware.rs  openapi.rs  pg_events.rs  pg_listener.rs  pii.rs  plugins.rs  portal.rs  qrcode_gen.rs  rate_limit.rs  reporting.rs  retention.rs  search.rs  security_events.rs  (+11 more)
crates/signapps-common/tests/: rbac_matrix.rs
crates/signapps-data-connectors/: Cargo.toml
crates/signapps-dav/: Cargo.toml
crates/signapps-dav/src/: caldav.rs  carddav.rs  ical.rs  lib.rs  vcard.rs  webdav.rs  xml.rs
crates/signapps-db/: Cargo.toml  query_out.txt
crates/signapps-db-content/: Cargo.toml
crates/signapps-db-content/src/: lib.rs
crates/signapps-db-itam/: Cargo.toml
crates/signapps-db-itam/src/: lib.rs
crates/signapps-db-shared/: Cargo.toml
crates/signapps-db-shared/src/: lib.rs
crates/signapps-db/examples/: force_cleanup.rs  init_admin.rs  init_schema.rs  list_tables.rs  purge.rs  query.rs  test_migration.rs  unlock.rs  update_admin_hash.rs
crates/signapps-db/migrations/: 20240321000001_create_floor_plans.down.sql  20240321000001_create_floor_plans.up.sql  20260324000001_uuid_v7_function.down.sql  20260324000001_uuid_v7_function.up.sql  20260324000002_audit_log.down.sql  20260324000002_audit_log.up.sql  20260324000003_entity_references.down.sql  20260324000003_entity_references.up.sql  20260324000004_activities.down.sql  20260324000004_activities.up.sql  20260324000005_signature_envelopes.down.sql  20260324000005_signature_envelopes.up.sql  20260324000006_notify_triggers.down.sql  20260324000006_notify_triggers.up.sql  20260324000007_soft_deletes.down.sql  20260324000007_soft_deletes.up.sql  20260324000008_cross_service_fks.down.sql  20260324000008_cross_service_fks.up.sql  20260324000009_active_views.down.sql  20260324000009_active_views.up.sql  20260324000010_billing.down.sql  20260324000010_billing.up.sql  20260324000011_notifications.down.sql  20260324000011_notifications.up.sql  20260324000012_fulltext_search.down.sql  20260324000012_fulltext_search.up.sql  20260324000013_job_retry_backoff.down.sql  20260324000013_job_retry_backoff.up.sql
crates/signapps-db/src/: lib.rs  pool.rs
crates/signapps-db/tests/: org_crud.rs  so1_repos.rs  so2_repos.rs  test_migration_427.rs  test_migration_500.rs  test_migration_501.rs  test_migration_502.rs  test_migration_503.rs  test_migration_506.rs  test_migration_507.rs
crates/signapps-dkim/: Cargo.toml
crates/signapps-dkim/src/: canonicalize.rs  dmarc.rs  keygen.rs  lib.rs  sign.rs  spf.rs  verify.rs
crates/signapps-dlp/: Cargo.toml
crates/signapps-dlp/src/: lib.rs
crates/signapps-dns-server/: Cargo.toml  README.md
crates/signapps-dns-server/src/: axfr.rs  dhcp.rs  dynamic.rs  lib.rs  ntp.rs  provision.rs  zone.rs
crates/signapps-dns-server/tests/: integration.rs
crates/signapps-drawing/: Cargo.toml
crates/signapps-drawing/src/: charts.rs  lib.rs  primitives.rs  shapes.rs  styles.rs  tree.rs
crates/signapps-e2e-crypto/: Cargo.toml
crates/signapps-e2e-crypto/src/: lib.rs
crates/signapps-entity/: Cargo.toml
crates/signapps-entity/src/: account.rs  lib.rs
crates/signapps-feature-flags/: Cargo.toml
crates/signapps-feature-flags/src/: cache.rs  evaluator.rs  lib.rs  repository.rs  types.rs
crates/signapps-filters/: Cargo.toml
crates/signapps-filters/src/: detector.rs  error.rs  intermediate.rs  lib.rs  registry.rs  traits.rs
crates/signapps-filters/tests/: pipeline_tests.rs
crates/signapps-graphql-layer/: Cargo.toml
crates/signapps-imap/: Cargo.toml
crates/signapps-imap/src/: fetch.rs  lib.rs  parser.rs  response.rs  session.rs
crates/signapps-indexer/: Cargo.toml
crates/signapps-indexer/src/: lib.rs
crates/signapps-jmap/: Cargo.toml
crates/signapps-jmap/src/: error.rs  lib.rs  session.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  lib.rs  main.rs  transcribe.rs
(+5276 files in other folders)
