[workspace]
resolver = "2"
members = [
    "crates/signapps-common",
    "crates/signapps-db",
    "services/signapps-identity",
    "services/signapps-containers",
    "services/signapps-proxy",
    "services/signapps-storage",
    "services/signapps-ai",
    "services/signapps-securelink",
    "services/signapps-scheduler",
    "services/signapps-metrics",
    "services/signapps-media",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["SignApps Team"]
license = "MIT"
repository = "https://github.com/signapps/signapps-platform"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
totp-rs = { version = "5", features = ["qr", "gen_secret"] }
oauth2 = "4"
ldap3 = "0.11"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Docker
bollard = "0.16"

# Vector DB
qdrant-client = "1"

# OpenAI-compatible (vLLM)
async-openai = "0.20"

# S3/MinIO
aws-sdk-s3 = "1"
aws-config = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
opentelemetry = "0.22"
opentelemetry-otlp = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.7", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
config = "0.14"
validator = { version = "0.16", features = ["derive"] }
derive_more = "0.99"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"
dashmap = "6"
bytes = "1.5"
mime_guess = "2"

# RAID management
sysinfo = "0.30"

# Crypto/encoding
base64 = "0.22"
rand = "0.8"

# Utilities for singleton/lazy init
once_cell = "1.19"

# Testing
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
