[workspace]
resolver = "2"
members = [
    # Shared crates
    "crates/signapps-common",
    "crates/signapps-db",
    "crates/signapps-cache",
    "crates/signapps-runtime",
    "crates/signapps-service",
    # Tauri desktop app
    "src-tauri",
    # Backend services
    "services/signapps-identity",
    "services/signapps-containers",
    "services/signapps-proxy",
    "services/signapps-storage",
    "services/signapps-securelink",
    "services/signapps-scheduler",
    "services/signapps-metrics",
    "services/signapps-docs",
    "services/signapps-calendar",
    "services/signapps-ai",
    "services/signapps-collab",
    "services/signapps-media",
    "services/signapps-mail",
    "services/signapps-pxe",
    "services/signapps-it-assets",
    "services/signapps-remote",
    "services/signapps-meet",
    "services/signapps-office",
    "services/signapps-workforce",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["SignApps Team"]
license = "MIT"
repository = "https://github.com/signapps/signapps-platform"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - SQLx
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "ipnetwork"] }

# In-process cache (replaces Redis)
moka = { version = "0.12", features = ["future"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
totp-rs = { version = "5", features = ["qr", "gen_secret"] }
oauth2 = "4"
ldap3 = "0.11"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Docker
bollard = "0.16"

# Vector DB (pgvector via PostgreSQL)
pgvector = { version = "0.3", features = ["sqlx"] }

# OpenAI-compatible (vLLM)
async-openai = "0.20"

# Storage (OpenDAL - local FS or S3)
opendal = { version = "0.51", features = ["services-fs", "services-s3"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.7", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
config = "0.14"
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"
dashmap = "6"
bytes = "1.5"
mime_guess = "2"

# RAID management
sysinfo = "0.30"

# Crypto/encoding
base64 = "0.22"
rand = "0.8"

# Utilities for singleton/lazy init
once_cell = "1.19"

# TFTP for PXE
async-tftp = "0.4.2"

# Reverse proxy
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1", "http2"] }
arc-swap = "1.7"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
instant-acme = "0.7"

# Testing
tokio-test = "0.4"

# Tauri desktop framework
tauri = { version = "2.2", features = ["devtools"] }
tauri-build = { version = "2.0" }
tauri-plugin-shell = "2.0"

# Email and notifications (will add when OpenSSL properly configured)
# lettre = "0.11"  # TODO: Requires OpenSSL on Windows
# web-push = "0.11"  # TODO: Add after lettre works

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
