[workspace]
resolver = "2"
members = [
    # Shared crates
    "crates/signapps-ad-core",
    "crates/signapps-smb-sysvol",
    "crates/signapps-ldap-server",
    "crates/signapps-kerberos-kdc",
    "crates/signapps-cache",
    "crates/signapps-audit",
    "crates/signapps-common",
    "crates/signapps-accounting-fec",
    "crates/signapps-e2e-crypto",
    "crates/signapps-reporting",
    "crates/signapps-marketplace",
    "crates/signapps-plugins",
    "crates/signapps-workflows",
    "crates/signapps-bridge",
    "crates/signapps-dlp",
    "crates/signapps-graphql-layer",
    "crates/signapps-ueba",
    "crates/signapps-sql-dashboard",
    "crates/signapps-data-connectors",
    "crates/signapps-alerts",
    "crates/signapps-approval",
    "crates/signapps-comments",
    "crates/signapps-email-templates",
    "crates/signapps-indexer",
    "crates/signapps-pii",
    "crates/signapps-rate-limit",
    "crates/signapps-retention",
    "crates/signapps-search",
    "crates/signapps-sso",
    "crates/signapps-triggers",
    "crates/signapps-trust",
    "crates/signapps-vault-types",
    "crates/signapps-webhooks",
    "crates/signapps-sharing",
    "crates/signapps-dav",
    "crates/signapps-db",
    "crates/signapps-db-calendar",
    "crates/signapps-db-forms",
    "crates/signapps-db-mail",
    "crates/signapps-db-notifications",
    "crates/signapps-db-shared",
    "crates/signapps-db-storage",
    "crates/signapps-db-vault",
    "crates/signapps-db-ai",
    "crates/signapps-db-infrastructure",
    "crates/signapps-db-itam",
    "crates/signapps-db-billing",
    "crates/signapps-db-content",
    "crates/signapps-db-identity",
    "crates/signapps-dkim",
    "crates/signapps-dns-server",
    "crates/signapps-imap",
    "crates/signapps-jmap",
    "crates/signapps-mime",
    "crates/signapps-runtime",
    "crates/signapps-service",
    "crates/signapps-sieve",
    "crates/signapps-smtp",
    "crates/signapps-spam",
    # Tauri desktop app
    "src-tauri",
    # Backend services
    "services/signapps-identity",
    "services/signapps-containers",
    "services/signapps-proxy",
    "services/signapps-storage",
    "services/signapps-securelink",
    "services/signapps-scheduler",
    "services/signapps-metrics",
    "services/signapps-docs",
    "services/signapps-calendar",
    "services/signapps-ai",
    # signapps-collab merged into signapps-docs (port 3010)
    "services/signapps-media",
    "services/signapps-mail",
    "services/signapps-pxe",
    "services/signapps-it-assets",
    # signapps-remote merged into signapps-meet (port 3014)
    "services/signapps-meet",
    # signapps-office merged into signapps-docs (port 3010)
    "services/signapps-workforce",
    "services/signapps-contacts",
    "services/signapps-forms",
    "services/signapps-chat",
    "services/signapps-billing",
    "services/signapps-notifications",
    "services/signapps-social",
    "services/signapps-vault",
    "services/signapps-org",
    "services/signapps-webhooks",
    "services/signapps-signatures",
    "services/signapps-tenant-config",
    "services/signapps-backup",
    "services/signapps-integrations",
    "services/signapps-compliance",
    "services/signapps-gamification",
    "services/signapps-collaboration",
    # signapps-dc merged into signapps-pxe (port 3016) — Refactor 35 Phase 3
    # Single-binary gateway (LT-05 POC)
    "services/signapps-gateway",
    # Endpoint management agent (standalone binary)
    "services/signapps-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["SignApps Team"]
license = "MIT"
repository = "https://github.com/signapps/signapps-platform"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "compression-br", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - SQLx
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "ipnetwork"] }

# In-process cache (replaces Redis)
moka = { version = "0.12", features = ["future"] }
# Used by signapps-scheduler for job queue (TODO: evaluate migration to moka for consistency)
redis = { version = "0.25", features = ["tokio-comp"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
totp-rs = { version = "5", features = ["qr", "gen_secret"] }
oauth2 = "4"
ldap3 = "0.11"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Docker
bollard = "0.16"

# Vector DB (pgvector via PostgreSQL)
pgvector = { version = "0.3", features = ["sqlx"] }

# OpenAI-compatible (vLLM)
async-openai = "0.20"

# Storage (OpenDAL - local FS or S3)
opendal = { version = "0.51", features = ["services-fs", "services-s3"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = ["tokio", "rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["http-proto", "reqwest-client", "reqwest-rustls"] }
prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.7", features = ["v4", "v5", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
config = "0.14"
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"
dashmap = "6"
bytes = "1.5"
mime_guess = "2"

# RAID management
sysinfo = "0.30"

# Crypto/encoding
base64 = "0.22"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"

# Utilities for singleton/lazy init
once_cell = "1.19"

# Full-text search
tantivy = "0.22"

# TFTP for PXE
async-tftp = "0.4.2"

# Reverse proxy
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1", "http2"] }
arc-swap = "1.7"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
instant-acme = "0.7"

# XML parsing (CalDAV/CardDAV)
quick-xml = { version = "0.37", features = ["serialize"] }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# QR Code generation
qrcode = { version = "0.14", features = ["svg"] }

# Testing
tokio-test = "0.4"
tempfile = "3"

# Tauri desktop framework
tauri = { version = "2.2", features = ["devtools"] }
tauri-build = { version = "2.0" }
tauri-plugin-shell = "2.0"

# Email and notifications (will add when OpenSSL properly configured)
# lettre = "0.11"  # TODO: Requires OpenSSL on Windows
# web-push = "0.11"  # TODO: Add after lettre works

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
