[package]
name = "signapps-approval"
version.workspace = true
edition = "2021"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Document approval workflow (multi-approver, status tracking) for SignApps Platform"

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
