[package]
name = "signapps-audit"
version.workspace = true
edition = "2021"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Audit trail / activity log for SignApps Platform"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Web
axum = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# OpenAPI documentation
utoipa = { workspace = true }
