[package]
name = "signapps-common"
version.workspace = true
edition = "2021"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared utilities and types for SignApps Platform"

[dependencies]
# Keystore (cryptographic key management)
signapps-keystore = { path = "../signapps-keystore" }

# Extracted domain crates (re-exported for backward compat)
signapps-audit = { path = "../signapps-audit" }
signapps-accounting-fec = { path = "../signapps-accounting-fec" }
signapps-e2e-crypto = { path = "../signapps-e2e-crypto" }
signapps-marketplace = { path = "../signapps-marketplace" }
signapps-plugins = { path = "../signapps-plugins" }
signapps-reporting = { path = "../signapps-reporting" }
signapps-bridge = { path = "../signapps-bridge" }
signapps-dlp = { path = "../signapps-dlp" }
signapps-graphql-layer = { path = "../signapps-graphql-layer" }
signapps-ueba = { path = "../signapps-ueba" }
signapps-sql-dashboard = { path = "../signapps-sql-dashboard" }
signapps-data-connectors = { path = "../signapps-data-connectors" }
signapps-alerts = { path = "../signapps-alerts" }
signapps-approval = { path = "../signapps-approval" }
signapps-comments = { path = "../signapps-comments" }
signapps-email-templates = { path = "../signapps-email-templates" }
signapps-indexer = { path = "../signapps-indexer" }
signapps-pii = { path = "../signapps-pii" }
signapps-rate-limit = { path = "../signapps-rate-limit" }
signapps-retention = { path = "../signapps-retention" }
signapps-sso = { path = "../signapps-sso" }
signapps-triggers = { path = "../signapps-triggers" }
signapps-trust = { path = "../signapps-trust" }
signapps-vault-types = { path = "../signapps-vault-types" }
signapps-webhooks = { path = "../signapps-webhooks" }

# Cryptography
aes-gcm = { workspace = true }
rand = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# Database
sqlx = { workspace = true }

# Web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# RBAC feature dependencies (enabled via the `rbac` cargo feature).
moka = { workspace = true, optional = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
prometheus = { workspace = true }

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
validator = { workspace = true }
once_cell = { workspace = true }

[features]
default = []
# Enables the unified RBAC contract (`signapps_common::rbac`).
# Opt-in so crates that don't talk to the resolver don't pay the
# `moka` compile cost.
rbac = ["dep:moka"]

[dev-dependencies]
tokio-test = { workspace = true }

[build-dependencies]
vergen = { version = "8", features = ["build", "cargo", "git", "gitcl", "rustc"] }
