[package]
name = "signapps-db-shared"
version.workspace = true
edition = "2021"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared database primitives: pool wrapper, Tenant, EntityReference, Job, Activity"

[dependencies]
# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Internal
signapps-common = { path = "../signapps-common" }

# OpenAPI schema derivation (optional feature)
utoipa = { workspace = true, optional = true }

[features]
openapi = ["utoipa"]
