[package]
name = "signapps-db"
version.workspace = true
edition = "2021"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Database access layer for SignApps Platform"

[dependencies]
# Database
sqlx = { workspace = true }
pgvector = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Internal
signapps-common = { path = "../signapps-common" }
signapps-db-shared = { path = "../signapps-db-shared" }
signapps-db-calendar = { path = "../signapps-db-calendar" }
signapps-db-forms = { path = "../signapps-db-forms" }
signapps-db-mail = { path = "../signapps-db-mail" }
signapps-db-notifications = { path = "../signapps-db-notifications" }
signapps-db-storage = { path = "../signapps-db-storage" }
signapps-db-vault = { path = "../signapps-db-vault" }
signapps-db-ai = { path = "../signapps-db-ai" }
signapps-db-infrastructure = { path = "../signapps-db-infrastructure" }
signapps-db-itam = { path = "../signapps-db-itam" }
signapps-db-billing = { path = "../signapps-db-billing" }
signapps-db-content = { path = "../signapps-db-content" }
signapps-db-identity = { path = "../signapps-db-identity" }

# OpenAPI schema derivation (optional feature)
utoipa = { workspace = true, optional = true }

[features]
openapi = ["utoipa", "signapps-db-calendar/openapi", "signapps-db-forms/openapi", "signapps-db-mail/openapi", "signapps-db-notifications/openapi", "signapps-db-storage/openapi", "signapps-db-vault/openapi", "signapps-db-ai/openapi", "signapps-db-infrastructure/openapi", "signapps-db-itam/openapi", "signapps-db-billing/openapi", "signapps-db-content/openapi", "signapps-db-identity/openapi"]

[dev-dependencies]
tokio-test = { workspace = true }
argon2 = { workspace = true }
