[package]
name = "signapps-dlp"
version.workspace = true
edition = "2021"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Data Loss Prevention (DLP) for SignApps Platform"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Pattern matching
regex = "1"

# Utilities
uuid = { workspace = true }
