[package]
name = "signapps-dns-server"
version.workspace = true
edition = "2021"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "AD DNS integration — zone provisioning, dynamic updates, SRV record management"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }

signapps-common = { path = "../signapps-common" }
signapps-db = { path = "../signapps-db" }
signapps-ad-core = { path = "../signapps-ad-core" }

[dev-dependencies]
tokio-test = { workspace = true }
