[package]
name = "signapps-drawing"
version.workspace = true
edition = "2021"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified drawing layer with primitive decomposition and multi-target rendering"

[features]
default = []
png = ["dep:resvg", "dep:usvg", "dep:tiny-skia"]
pdf = ["dep:printpdf"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# PNG rendering (optional)
resvg = { version = "0.44", optional = true }
usvg = { version = "0.44", optional = true }
tiny-skia = { version = "0.11", optional = true }

# PDF rendering (optional)
printpdf = { version = "0.7", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
