[package]
name = "signapps-filters"
version.workspace = true
edition = "2021"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified document filter pipeline for SignApps Platform"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

# Format-specific dependencies
docx-rs = "0.4"
calamine = "0.26"
rust_xlsxwriter = "0.79"
comrak = "0.31"
scraper = "0.20"
ego-tree = "0.6"
printpdf = "0.7"
lopdf = "0.33"
zip = "2.0"
mime_guess = { workspace = true }
base64 = "0.22"
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
