[package]
name = "signapps-graphql-layer"
version.workspace = true
edition = "2021"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "GraphQL layer configuration for SignApps Platform"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
