[package]
name = "signapps-indexer"
version.workspace = true
edition = "2021"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "AI indexer HTTP client for RAG pipeline notifications in SignApps Platform"

[dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
